--- a/cmpr121-final-project.vcxproj
+++ b/cmpr121-final-project.vcxproj
@@ -19,11 +19,11 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="src\PersonType.h" />
-  </ItemGroup>
-  <ItemGroup>
     <ClCompile Include="src\Main.cpp" />
     <ClCompile Include="src\PersonType.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="include\PersonType.h" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
