Changed namespace convention, removed using statements

--- a/cmpr121-final-project.vcxproj.filters
+++ b/cmpr121-final-project.vcxproj.filters
@@ -23,7 +23,7 @@
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="include\PersonType.h">
+    <ClInclude Include="src\PersonType.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
