--- a/cmpr121-final-project.vcxproj
+++ b/cmpr121-final-project.vcxproj
@@ -23,7 +23,7 @@
     <ClCompile Include="src\PersonType.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="include\PersonType.h" />
+    <ClInclude Include="src\PersonType.h" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
