--- a/cmpr121-final-project.vcxproj.filters
+++ b/cmpr121-final-project.vcxproj.filters
@@ -44,6 +44,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="ClassDiagram.cd" />
+    <None Include="ClassDiagram1.cd" />
   </ItemGroup>
   <ItemGroup>
     <Text Include="Candidate_data.txt">
